# posts-api

./: Cargo.toml  README.md
db/migrations/2022-05-22-220633_create_users/: up.sql
db/migrations/2022-05-23-232049_create_posts/: up.sql
db/migrations/2022-05-23-233116_create_posts/: up.sql
src/: config.rs  db.rs  main.rs
src/auth/: jwt.rs
src/handlers/: auth.rs  mod.rs  post.rs  user.rs
src/schema/: post.rs  user.rs
