[package]
name = "posts-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.2", features = ["diesel_postgres_pool", "postgres_pool"] }
rocket-validation = "0.1.0"
diesel = { version = "1.4.8", features = ["postgres", "r2d2"] }
diesel_migrations = "1.4.0"
validator = { version = "0.14.0", features = ["derive"] }
regex = "^1"
lazy_static = "1.4.0"
pwhash = "1"
jsonwebtoken = "8"
